throttling issues with timeslider fixed, added blurred background

--- a/src/containers/App/App.module.scss
+++ b/src/containers/App/App.module.scss
@@ -69,4 +69,18 @@
       font-size: 16px;
   }
 
+ 
+  .timeSlider{
+    padding:10px;
+    border-radius:10px;
+
+    //adds blur effect to background
+    @supports (-webkit-backdrop-filter: none) or (backdrop-filter: none) {
+        -webkit-backdrop-filter: blur(100px);
+        backdrop-filter: blur(15px);
+        background-color: rgba(255, 255, 255, 0.1);  
+      }
+
+  }
+
 }
